package bt_java.baitap_a3.factory;

public enum shapeType {
    Rectangle, Circle, Triangle;
}
